@@ -1,6 +1,6 @@
 Recent user-visible changes to Jacl & Tcl Blend:
 
-RCS: @(#) $Id: changes.txt,v 1.20 1999/05/24 15:47:35 mo Exp $
+RCS: @(#) $Id: changes.txt,v 1.21 1999/07/28 01:50:46 mo Exp $
 
 ----------------- Released 1.0a1, 10/22/97 -----------------------
 
@@ -870,3 +870,11 @@ return value of each use of the read command. This
 should also fix the bug in the gets command for files. (Mo)
 
 ----------------- Released 1.2.3, 5/24/99 -----------------------
+
+7/6/99 (fixed double allocation in Jacl's CharPointer class)
+The CharPointer class was creating two copies of every string
+before sending the string to the parser. This extra copy was
+removed by using the String.getChars() method instead of the
+String.toCharArray() method inside the CharPointer constructor. (Mo)
+
+
